--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dask-kubernetes==0.11.0
-dask==2020.12.0
+dask[complete]==2020.12.0
 distributed==2020.12.0
 prometheus_client==0.11.0
 jupyter-server-proxy==3.1.0
 bokeh>=0.13.0
+click<8
